crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__simple_for.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/simple_for.cm
input_file: test_data/control_flow/simple_for.cm
---
Fixture: control_flow/simple_for.cm
============================================================
Source code:
fn test_simple_for() -> felt {
    //!ASSERT FUNCTION_COUNT: 1

    let sum = 0;

    for (let i = 0; i != 10; i = i + 1) {
        sum = sum + i;
    }

    return sum;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_simple_for {
    entry: 0

    0:
      %0 = 0
      %1 = 0
      jump 1

    1:
      if %1 Neq 10 then jump 2 else jump 4

    2:
      %0 = %0 Add %1
      jump 3

    3:
      %1 = %1 Add 1
      jump 1

    4:
      return %0

  }

}
