crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__simple_if.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/simple_if.cm
input_file: test_data/control_flow/simple_if.cm
---
Fixture: control_flow/simple_if.cm
============================================================
Source code:
fn test_if(x: felt) -> felt {
    if (x == 0) {
        return 1;
    }
    return 2;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_if {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 1

    2:
      return 2

  }

}
