crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__simple_while.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/simple_while.cm
input_file: test_data/control_flow/simple_while.cm
---
Fixture: control_flow/simple_while.cm
============================================================
Source code:
fn test_simple_while() -> felt {
    let i = 0;
    let sum = 0;

    while (i != 10) {
        sum = sum + i;
        i = i + 1;
    }

    return sum;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_simple_while {
    entry: 0

    0:
      %0 = 0
      %1 = 0
      jump 1

    1:
      if %0 Neq 10 then jump 2 else jump 3

    2:
      %1 = %1 Add %0
      %0 = %0 Add 1
      jump 1

    3:
      return %1

  }

}
