crates/compiler/mir/tests/snapshots/mir_auto_discovery__all_fixtures_mir@control_flow__unreachable_after_return.cm.snap
---
source: crates/compiler/mir/tests/mir_auto_discovery.rs
description: MIR snapshot for control_flow/unreachable_after_return.cm
input_file: test_data/control_flow/unreachable_after_return.cm
---
Fixture: control_flow/unreachable_after_return.cm
============================================================
Source code:
//!ASSERT NOT_CONTAINS: store %0, 99
//!ASSERT NOT_CONTAINS: Unreachable code

// Tests that code generation stops after a `return` statement.
fn test() -> felt {
    return 42;

    // This code should not appear in the MIR.
    let x = 99; // Unreachable code
    return x;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 42

  }

}
